@@ -6,16 +6,16 @@ Genetica is a library to create and use **Genetics Algorithms** with Ruby.
 
 You can visit the page of *genetica* at https://rubygems.org/gems/genetica to see how install the latest gem version.
 
-At the moment with version 0.0.1.beta.2 you can use the next command:
+At the moment with version 0.0.1 you can use the next command:
 
-<pre><code>gem install genetica --pre</pre></code>
+```gem install genetica```
 
 ## Install from source code
 
 The best way to install *genetica* from source code is to generate the Ruby Gem with the *gem* utility:
 
-<pre><code>gem build genetica.gemspec</pre></code>
+```gem build genetica.gemspec```
 
 And install it:
 
-<pre><code>gem install genetica-*.gem</pre></code>
+```gem install genetica-0.0.1.gem```
