@@ -1,3 +1,0 @@
-$: << File.expand_path(File.join(File.dirname(__FILE__), '..', 'lib'))
-
-require 'genetica'
