@@ -1,7 +1,6 @@
 module Genetica
   class ChromosomeBuilder
-    attr_accessor :length
-    attr_accessor :alleles
+    attr_accessor :length, :alleles
 
     def initialize
       set_default_chromosome_attributes
@@ -16,8 +15,8 @@ module Genetica
     private
 
     def set_default_chromosome_attributes
-      self.length = 8
-      self.alleles = [0, 1]
+      @length = 8
+      @alleles = [0, 1]
     end
   end
 end
