@@ -3,16 +3,11 @@ module Genetica
     class PopulationClassError < StandardError; end
 
     # Population attributes
-    attr_accessor :size
-    attr_accessor :elitism
-    attr_accessor :crossover_method
-    attr_accessor :crossover_probability
-    attr_accessor :mutation_probability
-    attr_accessor :population_class
+    attr_accessor :size, :elitism, :crossover_method, :crossover_probability, :mutation_probability,
+      :population_class
 
     # Chromosome attributes
-    attr_accessor :chromosome_length
-    attr_accessor :chromosome_alleles
+    attr_accessor :chromosome_length, :chromosome_alleles
 
     def initialize
       set_default_population_attributes
@@ -20,7 +15,7 @@ module Genetica
     end
 
     def population
-      raise PopulationClassError, "You must assign a population class" if @population_class.nil?
+      raise PopulationClassError, 'You must assign a population class' if population_class.nil?
 
       population_class.new(chromosome_population).tap do |population|
         population.alleles = chromosome_alleles
@@ -34,17 +29,17 @@ module Genetica
     private
 
     def set_default_population_attributes
-      self.size = 20
-      self.elitism = 0
-      self.crossover_method = :uniform_crossover
-      self.crossover_probability = 0.7
-      self.mutation_probability = 0.001
-      self.population_class = nil
+      @size = 20
+      @elitism = 0
+      @crossover_method = :uniform_crossover
+      @crossover_probability = 0.7
+      @mutation_probability = 0.001
+      @population_class = nil
     end
 
     def set_default_chromosome_attributes
-      self.chromosome_length = 8
-      self.chromosome_alleles = [0, 1]
+      @chromosome_length = 8
+      @chromosome_alleles = [0, 1]
     end
 
     def chromosome_population
